--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<div class="container wrapper">
 		<div class="row">
 			<div class="col-sm-3 col-centered">
-				<img alt="profile-picture" class="img-responsive img-circle user-picture center-block" src="/Head Shot.jpg">
+				<img alt="profile-picture" class="img-responsive img-circle user-picture center-block" src="RoyHeadShot.jpg">
 			</div>
 		</div>
 		<div class="row">
