--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="collapse navbar-collapse" id="navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					<a href="https://roychance.wordpress.com">/home/roy</a>
+					<a href="https://roychancellor.github.io/index.html">/home/roy</a>
 				</li>
 				<li class="dropdown">
 					<a href="projects.html">~/java projects</a>
@@ -38,7 +38,7 @@
             				<a href="/Roy Chancellor_Quality_Process Engineer_Rogers.pdf">~/resume</a>
 				</li>
 				<li class="dropdown">
-					<a href="/downloads">~/downloads</a>
+					<a href="https://www.roychance.wordpress.com">~/engineering portfolio</a>
         			</li>
 			</ul>
 		</div>
@@ -59,12 +59,8 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-12 user-social text-center">
-				<a href="https://pgp.key-server.io/pks/lookup?op=vindex&search=0x99739260CB6CB716" title="GPG"><i class="fas fa-unlock-alt fa-3x" aria-hidden="true"></i></a>
-				<a href="https://twitter.com/roychance600" rel="me" title="Twitter"><i class="fab fa-twitter fa-3x" aria-hidden="true"></i></a>
 				<a href="https://github.com/roychancellor" rel="me" title="GitHub"><i class="fab fa-github fa-3x" aria-hidden="true"></i></a>
 				<a href="https://linkedin.com/in/roychancellor" rel="me" title="LinkedIn"><i class="fab fa-linkedin fa-3x" aria-hidden="true"></i></a>
-				<a href="https://instagram.com/roychance600" rel="me" title="Instagram"><i class="fab fa-instagram fa-3x" aria-hidden="true"></i></a>
-				<a href="https://t.me/roychance" rel="me" title="Telegram"><i class="fab fa-telegram fa-3x" aria-hidden="true"></i></a>
 				<a href="mailto:roychance600@gmail.com" title="Email"><i class="fas fa-envelope fa-3x" aria-hidden="true"></i></a>
 			</div>
 		</div>
