--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             				<a href="/Roy Chancellor_Quality_Process Engineer_Rogers.pdf">~/resume</a>
 				</li>
 				<li class="dropdown">
-					<a href="https://www.roychance.wordpress.com">~/engineering portfolio</a>
+					<a href="https://roychance.wordpress.com">~/engineering portfolio</a>
         			</li>
 			</ul>
 		</div>
