--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://nathanchance.me/css/nix.css">
+	<link rel="stylesheet" href="https://roychancellor.github.io/nix.css">
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata%7COpen+Sans%7CConcert+One" rel="stylesheet">
 </head>
 <body>
@@ -32,7 +32,7 @@
 					<a href="https://roychancellor.github.io/index.html">/home/roy</a>
 				</li>
 				<li class="dropdown">
-					<a href="projects.html">~/java projects</a>
+					<a href="https://roychancellor.github.io/projects.html">~/java projects</a>
         			</li>
 				<li class="dropdown">
             				<a href="/Roy Chancellor_Quality_Process Engineer_Rogers.pdf">~/resume</a>
@@ -49,7 +49,8 @@
 	<div class="container wrapper">
 		<div class="row">
 			<div class="col-sm-3 col-centered">
-				<img alt="profile-picture" class="img-responsive img-circle user-picture center-block" src="RoyHeadShotSmall.jpg">
+				<img alt="profile-picture" class="img-responsive img-circle user-picture center-block"
+				     src="RoyHeadShotSmall.jpg">
 			</div>
 		</div>
 		<div class="row">
@@ -66,7 +67,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-4 col-md-offset-4 user-description text-center">
-				<p>Hello, my name is Roy and I am beginning a career as a Java developer, focusing on back-end web applications.  I am currently at GCU earning a Java programming certifcate after 14 years as a mechanical engineer and 11 years as a mathematics educator.  Check out the links above.</p>
+				<p>Welcome to Roy's site. I am beginning a career as a Java developer, focusing on back-end web applications.  I am currently at GCU earning a Java programming certifcate after 14 years as a mechanical engineer and 11 years as a mathematics educator.  Check out the links above.</p>
 			</div>
 		</div>
 		<div class="push"></div>
