--- a/projects.html
+++ b/projects.html
@@ -55,8 +55,9 @@
 	    	<p>All of my personal projects can be found on <a href="https://github.com/roychancellor/">GitHub</a>, here is a repository that I am proud of:</p>
 		<h1 id="clangbuiltlinux">Project Euler</h1>
 			<p><a href="https://projecteuler.net/about">Project Euler</a>
-				is a collection of challenging math problems solved with programming.  I have used these problems for intellectual stimulation and to practice coding in Java.</p>
-			<p>Archives of the problems are <a href="https://projecteuler.net/archives">here</a></p>
+				is a collection of challenging math problems solved with programming.  I have used these
+				problems for intellectual stimulation and to practice coding in Java.  Archives of the
+				problems are <a href="https://projecteuler.net/archives">here</a></p>
 		<ul>
 		<li><p>Project 1:</p></li>
 		<li><p>Project 2:</p></li>
