--- a/projects.html
+++ b/projects.html
@@ -60,14 +60,16 @@
 				problems for intellectual stimulation and to practice coding in Java.  Archives of the
 				problems are <a href="https://projecteuler.net/archives">here</a></p>
 		<ul>
-		<li><p>Project 1:</p></li>
-		<li><p>Project 2:</p></li>
-		<li><p>Project 3:</p></li>
+		<li><p>Project 1:  Find the first triangular number that has at least 500 divisors (Problem #12)</p></li>
+		<li><p>Project 2:  Find the first 10 digits of the sum of 100 fifty-digit numbers (Problem #13)</p></li>
+		<li><p>Project 3:  Find the number of paths through a 20 x 20 grid (Problem #15)</p></li>
+		<li><p>Project 4:  Find the sum of the digits in 2^1000 (Problem #16)</p></li>
+		<li><p>Project 5:  Total number of letters used to write out 1-1000 in words (Problem #17)</p></li>
+		<li><p>Project 6:  Find the sum of the digits in 100! (Problem #20)</p></li>
 		</ul>
 		
 		<h1 id="clangbuiltlinux">Java Projects</h1>
-		<p><a href="https://projecteuler.net/about">Project Euler</a> is a collection of challenging math problems solved with programming.  I have used these problems for intellectual stimulation and to practice coding in Java.</p>
-		<p>Archives of the problems are <a href="https://projecteuler.net/archives">here</a></p>
+		<p>Programs written as part of the <a href="https://www.gcu.edu/degree-programs/java-programming-certificate"GCU Java Programming Certificate</a></p>
 		<ul>
 		<li><p>Project 1:</p></li>
 		<li><p>Project 2:</p></li>
