--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,24 @@
 		</ul>
 		
 		<h1 id="clangbuiltlinux">Java Projects</h1>
-		<p>Programs written as part of the <a href="https://www.gcu.edu/degree-programs/java-programming-certificate"GCU Java Programming Certificate</a></p>
+		<p>Programs written as part of the <a href="https://www.gcu.edu/degree-programs/java-programming-certificate">
+			GCU Java Programming Certificate</a></p>
+		<ul>
+		<li><p>Project 1:  Banking Application</p></li>
+		<li><p>Project 2:</p></li>
+		<li><p>Project 3:</p></li>
+		</ul>			
+
+		<h1 id="clangbuiltlinux">Visual Basic for Applications Projects</h1>
+		<p>Programs written to automate processes in Excel during my engineering and teaching careers</p>
+		<ul>
+		<li><p>Project 1:</p></li>
+		<li><p>Project 2:</p></li>
+		<li><p>Project 3:</p></li>
+		</ul>			
+
+		<h1 id="clangbuiltlinux">C Projects</h1>
+		<p>Programs written during graduate school and for automating satellite modem testing</p>
 		<ul>
 		<li><p>Project 1:</p></li>
 		<li><p>Project 2:</p></li>
