--- a/projects.html
+++ b/projects.html
@@ -60,12 +60,18 @@
 				problems for intellectual stimulation and to practice coding in Java.  Archives of the
 				problems are <a href="https://projecteuler.net/archives">here</a></p>
 		<ul>
-		<li><p>Project 1:  Find the first triangular number that has at least 500 divisors (Problem #12)</p></li>
-		<li><p>Project 2:  Find the first 10 digits of the sum of 100 fifty-digit numbers (Problem #13)</p></li>
-		<li><p>Project 3:  Find the number of paths through a 20 x 20 grid (Problem #15)</p></li>
-		<li><p>Project 4:  Find the sum of the digits in 2^1000 (Problem #16)</p></li>
-		<li><p>Project 5:  Total number of letters used to write out 1-1000 in words (Problem #17)</p></li>
-		<li><p>Project 6:  Find the sum of the digits in 100! (Problem #20)</p></li>
+		<li><p>Project 1:  Find the first triangular number that has at least 500 divisors (
+			<a href="https://projecteuler.net/problem=12"Problem #12</a>)</p></li>
+		<li><p>Project 2:  Find the first 10 digits of the sum of 100 fifty-digit numbers (
+			<a href="https://projecteuler.net/problem=13"Problem #13</a>)</p></li>
+		<li><p>Project 3:  Find the number of paths through a 20 x 20 grid (
+			<a href="https://projecteuler.net/problem=15"Problem #15</a>)</p></li>
+		<li><p>Project 4:  Find the sum of the digits in 2^1000 (
+			<a href="https://projecteuler.net/problem=16"Problem #16</a>)</p></li>
+		<li><p>Project 5:  Total number of letters used to write out 1-1000 in words (
+			<a href="https://projecteuler.net/problem=17"Problem #17</a>)</p></li>
+		<li><p>Project 6:  Find the sum of the digits in 100! (
+			<a href="https://projecteuler.net/problem=20"Problem #20</a>)</p></li>
 		</ul>
 		
 		<h1 id="clangbuiltlinux">Java Projects</h1>
