--- a/projects.html
+++ b/projects.html
@@ -60,22 +60,22 @@
 				problems for intellectual stimulation and to practice coding in Java.  Archives of the
 				problems are <a href="https://projecteuler.net/archives">here</a></p>
 		<ul>
-		<li><p>Project 1:  Find the first triangular number that has at least 500 divisors (
+		<li><p>Find the first triangular number that has at least 500 divisors (
 			<a href="https://projecteuler.net/problem=12">Problem #12</a>)</p>
 		</li>
-		<li><p>Project 2:  Find the first 10 digits of the sum of 100 fifty-digit numbers (
+		<li><p>Find the first 10 digits of the sum of 100 fifty-digit numbers (
 			<a href="https://projecteuler.net/problem=13">Problem #13</a>)</p>
 		</li>
-		<li><p>Project 3:  Find the number of paths through a 20 x 20 grid (
+		<li><p>Find the number of paths through a 20 x 20 grid (
 			<a href="https://projecteuler.net/problem=15">Problem #15</a>)</p>
 		</li>
-		<li><p>Project 4:  Find the sum of the digits in 2^1000 (
+		<li><p>Find the sum of the digits in 2^1000 (
 			<a href="https://projecteuler.net/problem=16">Problem #16</a>)</p>
 		</li>
-		<li><p>Project 5:  Total number of letters used to write out 1-1000 in words (
+		<li><p>Total number of letters used to write out 1-1000 in words (
 			<a href="https://projecteuler.net/problem=17">Problem #17</a>)</p>
 		</li>
-		<li><p>Project 6:  Find the sum of the digits in 100! (
+		<li><p>Find the sum of the digits in 100! (
 			<a href="https://projecteuler.net/problem=20">Problem #20</a>)</p>
 		</li>
 		</ul>
@@ -89,16 +89,9 @@
 		<li><p>Project 3:</p></li>
 		</ul>			
 
-		<h1 id="clangbuiltlinux">Visual Basic for Applications Projects</h1>
-		<p>Programs written to automate processes in Excel during my engineering and teaching careers</p>
-		<ul>
-		<li><p>Project 1:</p></li>
-		<li><p>Project 2:</p></li>
-		<li><p>Project 3:</p></li>
-		</ul>			
-
-		<h1 id="clangbuiltlinux">C Projects</h1>
-		<p>Programs written during graduate school and for automating satellite modem testing</p>
+		<h1 id="clangbuiltlinux">VBA and C Projects</h1>
+		<p>Programs written to automate processes in Excel during my engineering and teaching careers and programs written in C
+			during graduate school and for testing satellite modems</p>
 		<ul>
 		<li><p>Project 1:</p></li>
 		<li><p>Project 2:</p></li>
