--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> My projects &middot; Roy Chancellor </title>
+        <title> Programming Projects &middot; Roy Chancellor </title>
 
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -34,14 +34,14 @@
 					<a href="https://roychancellor.github.io/index.html">/home/roy</a>
 				</li>
 				<li class="dropdown">
-            				<a href="/projects.html">~/projects</a>
+            				<a href="/projects.html">~/programming projects</a>
             			</li>
+				<li class="dropdown">
+            				<a href="https://roychance.wordpress.com">~/engineering projects</a>
+	        		</li>
 				<li class="dropdown">
 	            			<a href="/Roy Chancellor_Quality_Process Engineer_Rogers.pdf">~/resume</a>
         			</li>
-				<li class="dropdown">
-            				<a href="https://roychance.wordpress.com">~/engineering portfolio</a>
-	        		</li>
 			</ul>
 			</div>
 		</div>
