--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
 					<a href="https://roychancellor.github.io/index.html">/home/roy</a>
 				</li>
 				<li class="dropdown">
-					<a href="https://roychancellor.github.io/projects.html">~/java projects</a>
-        			</li>
+            				<a href="/projects.html">~/programming projects</a>
+            			</li>
 				<li class="dropdown">
-            				<a href="/Roy Chancellor_Quality_Process Engineer_Rogers.pdf">~/resume</a>
-				</li>
+            				<a href="https://roychance.wordpress.com">~/engineering projects</a>
+	        		</li>
 				<li class="dropdown">
-					<a href="https://roychance.wordpress.com">~/engineering portfolio</a>
+	            			<a href="/Roy Chancellor_Quality_Process Engineer_Rogers.pdf">~/resume</a>
         			</li>
+			</ul>
 			</ul>
 		</div>
 	</div>
