--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<a href="https://roychancellor.github.io/index.html">/home/roy</a>
 				</li>
 				<li class="dropdown">
-            				<a href="/website/projects.html">~/programming projects</a>
+            				<a href="https://roychancellor.github.io/website/projects.html">~/programming projects</a>
             			</li>
 				<li class="dropdown">
             				<a href="https://roychance.wordpress.com">~/engineering projects</a>
