--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             				<a href="https://roychance.wordpress.com">~/engineering projects</a>
 	        		</li>
 				<li class="dropdown">
-	            			<a href="/Roy Chancellor_Quality_Process Engineer_Rogers.pdf">~/resume</a>
+	            			<a href="https://roychancellor.github.io/website/graphics/Roy Chancellor_Quality_Process Engineer_Rogers.pdf">~/resume</a>
         			</li>
 			</ul>
 			</ul>
@@ -51,7 +51,7 @@
 		<div class="row">
 			<div class="col-sm-3 col-centered">
 				<img alt="profile-picture" class="img-responsive img-circle user-picture center-block"
-				     src="RoyHeadShotSmall.jpg">
+				     src="https://roychancellor.github.io/website/graphics/RoyHeadShotSmall.jpg">
 			</div>
 		</div>
 		<div class="row">
