--- a/website/projects.html
+++ b/website/projects.html
@@ -37,10 +37,10 @@
             				<a href="https://roychancellor.github.io/website/projects.html">~/programming projects</a>
             			</li>
 				<li class="dropdown">
-            				<a href="https://roychance.wordpress.com">~/engineering projects</a>
+            				<a href="https://roychancellor.github.io/website/engineering.html">~/engineering projects</a>
 	        		</li>
 				<li class="dropdown">
-	            			<a href="https://roychancellor.github.io/website/Roy Chancellor_Quality_Process Engineer_Rogers.pdf">~/resume</a>
+	            			<a href="https://roychancellor.github.io/website/graphics/Roy Chancellor_Quality_Process Engineer_Rogers.pdf">~/resume</a>
         			</li>
 			</ul>
 			</div>
