--- a/website/engineering.html
+++ b/website/engineering.html
@@ -80,7 +80,7 @@
 		</li>
 		</ul>
 		
-		<h1 id="clangbuiltlinux">Java Projects</h1>
+		<h1 id="clangbuiltlinux">Reactive Problem Solving</h1>
 		<p>Programs written as part of the <a href="https://www.gcu.edu/degree-programs/java-programming-certificate">
 			GCU Java Programming Certificate</a></p>
 		<ul>
@@ -89,7 +89,7 @@
 		<li><p>Project 3:</p></li>
 		</ul>			
 
-		<h1 id="clangbuiltlinux">VBA and C Projects</h1>
+		<h1 id="clangbuiltlinux">Proactive Problem Solving</h1>
 		<p>Programs written to automate processes in Excel during my engineering and teaching careers and programs written in C
 			during graduate school and for testing satellite modems</p>
 		<ul>
