--- a/resume/resume.html
+++ b/resume/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-     <link rel="stylesheet" href="resume.css">
+     <link rel="stylesheet" href="https://roychancellor.github.io/resume/resume.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   
@@ -12,17 +12,17 @@
       </div>
       <div class="column resume-contact-left">
         <div id="my-contact">
-          <img style="display:inline;" src="wordpressLogoSolo.png" id="icon-web">
+          <img style="display:inline;" src="https://roychancellor.github.io/resume/graphics/wordpressLogoSolo.png" id="icon-web">
           <p>roychance.wordpress.com</p>
-          <img style="display:inline;" src="PHONE ICON.png" id="icon-phone">
+          <img style="display:inline;" src="https://roychancellor.github.io/resume/graphics/PHONE ICON.png" id="icon-phone">
           <p>(480) 242-6356</p>
         </div>
       </div>
       <div class="column resume-contact-right">
         <div id="my-contact">
-          <img style="display:inline;" src="iconmonstr-email-4-icon-27.png" id="icon-email">
+          <img style="display:inline;" src="https://roychancellor.github.io/resume/graphics/iconmonstr-email-4-icon-27.png" id="icon-email">
           <p>roychance600@gmail.com</p>
-          <img style="display:inline;" src="home-home-icon-80046.png" id="icon-home">
+          <img style="display:inline;" src="https://roychancellor.github.io/resume/graphics/home-home-icon-80046.png" id="icon-home">
           <p>2014 E. Anderson Drive, Phoenix, AZ  85022</p>
         </div>
       </div>
@@ -46,7 +46,7 @@
         <div id="section-header">
           <p>PROBLEM SOLVER</p>
         </div>
-        <h4><img style="display:inline;" src="LRunChart.JPG" id="graph1">Dim Edges on Automotive EL Lamps</h4>
+        <h4><img style="display:inline;" src="https://roychancellor.github.io/resume/graphics/LRunChart.JPG" id="graph1">Dim Edges on Automotive EL Lamps</h4>
         <p>Executed binary search strategies that found the Red X causing dim edges on electroluminescent (EL) lamps
           at an automotive customer. Installed a statistical control plan that permanently eliminated the root cause and
           drove the complaint to zero incidents.</p>
@@ -54,7 +54,7 @@
         <div id="section-header">
           <p>PROBLEM PREVENTER</p>
         </div>
-        <h4><img style="display:inline;" src="SKINSTICKING.png" id="graph2">New Product Substrate Sticking</h4>
+        <h4><img style="display:inline;" src="https://roychancellor.github.io/resume/graphics/SKINSTICKING.png" id="graph2">New Product Substrate Sticking</h4>
         <p>New peel-off EL lamp product was sticking to its substrate. Isolated the cause to a chemical interaction with
           UV curing, but was unable to get to root cause.  Implemented a simple die-cutting solution that enabled lamp
           removal and allowed a high-yield, on-time launch.</p>
@@ -67,7 +67,7 @@
           <p>PROFESSIONAL EXPERIENCE</p>      
         </div>
         <div id="company-school-name">
-          <p><img style="display:inline;" src="GREATHEARTS.png" id="icon-univ">
+          <p><img style="display:inline;" src="https://roychancellor.github.io/resume/graphics/GREATHEARTS.png" id="icon-univ">
             Great Hearts Academies, Phoenix, AZ</p>
           <h6>Master Teacher of Mathematics (Aug 2008 - May 2013 & Aug 2015 - Present)</h6>
         </div>
@@ -83,17 +83,17 @@
           <p>EDUCATION</p>      
         </div>
         <div id="company-school-name">
-          <p><img style="display:inline;" src="RIT.png" id="icon-univ">
+          <p><img style="display:inline;" src="https://roychancellor.github.io/resume/graphics/RIT.png" id="icon-univ">
           Advanced Graduate Certificate, Statistics</p>
         </div> 
           <h6>Rochester Institute of Technology (2004)</h6>
         <div id="company-school-name">
-          <p><img style="display:inline;" src="TAMU.png" id="icon-univ">
+          <p><img style="display:inline;" src="https://roychancellor.github.io/resume/graphics/TAMU.png" id="icon-univ">
           M.S., Mechanical Engineering</p>
         </div>
           <h6>Texas A&M University (1993)</h6>
         <div id="company-school-name">
-          <p><img style="display:inline;" src="ASU.png" id="icon-univ">
+          <p><img style="display:inline;" src="https://roychancellor.github.io/resume/graphics/ASU.png" id="icon-univ">
           B.S.E., Mechanical Engineering</p>
         </div>
           <h6>Arizona State University (1991)</h6>
@@ -103,7 +103,7 @@
     <div class="row">
       <div class="column professional-experience-full">
         <div id="company-school-name">
-          <p><img style="display:inline;" src="SEL.png" id="icon-univ">
+          <p><img style="display:inline;" src="https://roychancellor.github.io/resume/graphics/SEL.png" id="icon-univ">
             Schweitzer Engineering Laboratories, Pullman, WA</p>
           <h6>Manufacturing Engineer, New Product Introduction (Jun 2013 - Jul 2015)</h6>
         </div>
@@ -113,7 +113,7 @@
           <li>Completed a major upgrade to the SEL-2730 switch under a compressed time schedule</li>
         </ul>
         <div id="company-school-name">
-          <p><img style="display:inline;" src="INTEL.png" id="icon-univ">
+          <p><img style="display:inline;" src="https://roychancellor.github.io/resume/graphics/INTEL.png" id="icon-univ">
             Intel Corporation, Chandler, AZ</p>
           <h6>Statistician (Dec 2005 - Jul 2006)</h6>
         </div>
@@ -126,7 +126,7 @@
           apply statistics in their jobs and received high ratings for clarity and passion</li>
         </ul>
         <div id="company-school-name">
-          <p><img style="display:inline;" src="ROGERS.png" id="icon-univ">
+          <p><img style="display:inline;" src="https://roychancellor.github.io/resume/graphics/ROGERS.png" id="icon-univ">
             Rogers Corporation, Chandler, AZ</p>   
           <h6>Six Sigma Master Black Belt (Jan 2003 - Dec 2005)</h6>
           <h6>Senior Manufacturing Engineer (Sep 1999 - Dec 2002)</h6>
@@ -138,7 +138,7 @@
           and influencing key executives</li>
         </ul>
         <div id="company-school-name">
-          <p><img style="display:inline;" src="ORBITAL.png" id="icon-univ">
+          <p><img style="display:inline;" src="https://roychancellor.github.io/resume/graphics/ORBITAL.png" id="icon-univ">
             Orbital Sciences Corporation, Chandler, AZ</p>
           <h6>Mechanical Engineer (Aug 1998 - Sep 1999></h6>
         </div>
@@ -149,7 +149,7 @@
             qualification testing for new configurations</li>
         </ul>
         <div id="company-school-name">
-          <p><img style="display:inline;" src="GORE.png" id="icon-univ">
+          <p><img style="display:inline;" src="https://roychancellor.github.io/resume/graphics/GORE.png" id="icon-univ">
             W.L. Gore and Associates, Phoenix, AZ</p>
           <h6>Process Development Engineer (May 1994 - Aug 1998)</h6>
         </div>
