--- a/resume/resume.html
+++ b/resume/resume.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <title> Roy Chancellor Resume </title>
   <head>
      <link rel="stylesheet" href="https://roychancellor.github.io/resume/resume.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
