--- a/programming_projects/index.html
+++ b/programming_projects/index.html
@@ -92,23 +92,24 @@
 
 <h1 id="projecteuler">ProjectEuler</h1>
 
-<p><a href="https://projecteuler.net/about">Project Euler</a> is a collection of challenging math problems solved with programming.  I have used these problems for intellectual stimulation and to practice coding in Java.  Archives of the problems are <a href="https://projecteuler.net/archives">here</a>.</p>
+<p><a href="https://projecteuler.net/about">Project Euler</a> is a collection of challenging math problems solved with programming. I have used these problems for intellectual stimulation and to practice coding in Java.  Archives of the problems are <a href="https://projecteuler.net/archives">here</a>.</p>
 
 <ul>
 <li>Find the first triangular number that has at least 500 divisors <a href="https://projecteuler.net/problem=12">Problem #12</a></li>
-<li>&lt;Find the first 10 digits of the sum of 100 fifty-digit numbers <a href="https://projecteuler.net/problem=13">Problem #13</a></li>
+<li>Find the first 10 digits of the sum of 100 fifty-digit numbers <a href="https://projecteuler.net/problem=13">Problem #13</a></li>
 <li>Find the number of paths through a 20 x 20 grid <a href="https://projecteuler.net/problem=15">Problem #15</a></li>
 <li>Find the sum of the digits in 2^1000 <a href="https://projecteuler.net/problem=16">Problem #16</a></li>
 <li>Total number of letters used to write out 1-1000 in words <a href="https://projecteuler.net/problem=17">Problem #17</a></li>
 <li>Find the sum of the digits in 100! <a href="https://projecteuler.net/problem=20">Problem #20</a></li>
 </ul>
 
-<h1 id="javaprojects">JavaProjects</h1>
+<h1 id="java-projects">Java Projects</h1>
 
-<p>Programs written as part of the <a href="https://www.gcu.edu/degree-programs/java-programming-certificate">GCU Java Programming Certificate</a>
-* Project 1:  Banking Application
-* Project 2:
-* Project 3:</p>
+<p>Programs written as part of the <a href="https://www.gcu.edu/degree-programs/java-programming-certificate">GCU Java Programming Certificate</a>.</p>
+
+<ul>
+<li><a href="https://github.com/roychancellor/GCU/tree/master/CST105%20Banking">Banking Application</a>:  Implements a simple bank as a Java console application. Extensions include adding date/time stamp of each transaction and storing each transaction in and ArrayList of strings for later retrieval.</li>
+</ul>
 
             </div>
             
