--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-md-offset-4 user-description text-center">
-					<p>Welcome! I have been programming most of my life, starting with BASIC on a Commodore PET, moving to the TRS-80, TI-99/4A, Apple II, and finally the PC. Surprisingly, it was the mechanical engineering program at ASU that exposed me to the C language that proved invaluable for simulating dynamic systems, acquiring data, controlling mechanical systems, and performing mathematical analysis. After working in engineering for 14 years and another 11 as a math teacher, I am coming full circle to start a career as a Java developer. I am currently at GCU acquiring Java skills and plan to start work in mid-September. Check out the content in the menu above for more about my past and present work.</p>
+					<p>Welcome! I have been programming since I was 12, starting with BASIC on a Commodore PET, moving to the TRS-80, TI-99/4A, Apple II, and finally the PC. Surprisingly, it was mechanical engineering at ASU that introduced me to the C language and laid the foundation for several years of problem solving with code: numerical analysis, data acquisition from electronic devices, graphical data displays, and dynamic system simulation. After 14 years in engineering and 11 years in education, I am going after my passion for programming by acquiring skills in Java and JavaScript with the goal of developing web applications professionally. Check out the content in the menu above for more about my past and present work.</p>
 				</div>
 			</div>
 			<div class="push"></div>
