Updated banking app repository

--- a/programming_projects/index.html
+++ b/programming_projects/index.html
@@ -108,7 +108,7 @@
 <p>Programs written as part of the <a href="https://www.gcu.edu/degree-programs/java-programming-certificate">GCU Java Programming Certificate</a>.</p>
 
 <ul>
-<li><a href="https://github.com/roychancellor/GCU/tree/master/CST105%20Banking">Banking Application</a>:  Implements simple banking features (like an ATM) as a Java console application using object-oriented concepts. Extensions include adding date/time stamp of each transaction and storing each transaction in and ArrayList of strings for later retrieval.</li>
+<li><a href="https://github.com/roychancellor/BankingApp/tree/master/src/main/java/CST_105_Banking_App/BankingApp">Banking Application</a>:  Implements simple banking features (like an ATM) as a Java console application using object-oriented concepts. Extensions include adding date/time stamp of each transaction and storing each transaction in and ArrayList of strings for later retrieval.</li>
 </ul>
 
 <h1 id="c-projects">C Projects</h1>
@@ -117,7 +117,7 @@
 
 <ul>
 <li><a href="https://github.com/roychancellor/C_CPP/tree/master/PolyRootFinder">Polynomial root finder</a>: Finds all real and complex roots of polynomials from degree 1 to degree 8. Demonstrates the rational root theorem, Descartes&rsquo; rule of signs, and implements Bairstow&rsquo;s method for roots of degree 3 or higher.</li>
-<li><a href="https://github.com/roychancellor/C_CPP/tree/master/FFT">Fast Fourier Transform (FFT)</a>:  Computes the FFT of a set of data read in from a file. COMING SOON.</li>
+<li><a href="https://github.com/roychancellor/C_CPP/tree/master/FFT">Fast Fourier Transform (FFT)</a>:  Computes the FFT of a set of data read in from a file.</li>
 </ul>
 
             </div>
