--- a/programming_projects/index.html
+++ b/programming_projects/index.html
@@ -95,7 +95,8 @@
 <p>Programs written as part of the <a href="https://www.gcu.edu/degree-programs/java-programming-certificate">GCU Java Programming Certificate</a>.</p>
 
 <ul>
-<li><a href="https://github.com/roychancellor/BankingAppLinuxTomcat">Banking Application</a>:  Implements basic online-banking features as a web application using object-oriented concepts (abstraction, inheritance, and polymorphism) using the MVC design pattern. Customer data and transactions are persistent in a SQL database with salted/hashed login credentials. Built using Java, Spring, MySQL, and JSP for web pages.</li>
+<li><a href="https://github.com/roychancellor/BankingAppLinuxTomcat">Banking Application</a>:  Implements basic online-banking features as a web application using object-oriented concepts (abstraction, inheritance, and polymorphism) using the MVC design pattern. Customer data and transactions are persistent in a SQL database with salted/hashed login credentials. Built using Java, Spring, MySQL, and JSP for web pages. RUN IT <a href="http://roybank.dynu.net/bank/login">HERE</a>.</li>
+<li>REST web service for getting customer information from the banking application: Used a Spring RestController to get customer information from the databse and return a JSON object. Access it <a href="http://roybank.dynu.net/bank/customer?id=1">here</a> with a query parameter ?id=1 (or any number from 1 to 9&hellip;you will find the 2001 Arizona Diamondbacks world-series game 7 roster)</li>
 <li><a href="https://github.com/roychancellor/VendingMachine">Vending Machine Management</a>: Implements a customer-facing vending machine application with a back-end for machine administration. Used agile principles and completed the app from scratch in less than 10 days.</li>
 </ul>
 
